--- a/src/Help/QSTit_Help_En.htm
+++ b/src/Help/QSTit_Help_En.htm
@@ -32,17 +32,19 @@
 	tr.c2	{background-color:#353535;}
 	td	    {padding-top:0px;padding-bottom:0px;padding-left:3px;padding-right:9px;border:1px;}
         a	{color:yellow;}
-        blockquote	{color:black;background-color:white;padding:3px;}
+        blockquote	{color:black;background-color:white;padding:3px;max-width:600px;}
+	p {max-width:720px;}
 </style>
 <body>
-<p>To report a problem or give us some feedback: subtitles@nova-cinema.org</p>
+<p><b>Qstit</b> is developed by Nova Cinema, Brussels, and released under the GNU General Public License.<br/>
+To report a problem or give us some feedback: subtitles@nova-cinema.org</p>
 <p>
 <br/><u><span style="font-weight:bold;">Menu</span></u>
 <table>
 <tr class="c1"><td><img src=":/Imag/QSTit_sett.png" height=16> Settings</td><td>Show 'Settings' window</td><td>[Ctrl+S]</td></tr>
 <tr class="c2"><td><img src=":/Imag/QSTit_file.png" height=16> Open</td><td>Open subtitle file<br/> (Supported formats: <a href="#txt">.txt</a>, <a href="#srt">.srt</a>)</td><td>[Ctrl+O]</td></tr>
 <tr class="c1"><td><img src=":/Imag/QSTit_help_enab.png" height=16> Help</td><td>Show this window</td><td>[F1]</td></tr>
-<tr class="c2"><td><img src=":/Imag/QSTit_exit.png" height=16> Quit</td><td>Quit the program</td><td>[Ctrl+Q]</td></tr>
+<tr class="c2"><td><img src=":/Imag/QSTit_exit.png" height=16> Exit</td><td>Quit the program</td><td>[Ctrl+X]</td></tr>
 </table>
 </p>
 <p>
@@ -58,7 +60,7 @@
 <tr class="c0"><td>&nbsp;</td><td></td><td></td></tr>
 <tr class="c1"><td><img src=":/Imag/QSTit_jump.png" height=16></td><td>Jump forward on the timeline</td><td>[&rarr;] or [Numpad 6]</td><td>(.srt files only)</td></tr>
 <tr class="c1"><td></td><td colspan="3">(Between 0.1 and 1 second, jump steps can be set in the settings)</td></tr>
-<tr class="c2"><td><img src=":/Imag/QSTit_jump_back.png" height=16></td><td>Jump backwards on the timeline</td><td>[&larr;] or [Numpad 4]</td><td>(.srt files only)</td></tr>
+<tr class="c2"><td><img src=":/Imag/QSTit_jump_back.png" height=16></td><td>Jump backward on the timeline</td><td>[&larr;] or [Numpad 4]</td><td>(.srt files only)</td></tr>
 <tr class="c2"><td></td><td colspan="3">(Between 0.1 and 1 second, steps can be set in the settings)</td></tr>
 </table>
 </p>
@@ -71,6 +73,7 @@
 <tr class="c1"><td></td><td>Subtitles position: Move left</td><td>[Home] or [Numpad 7]</td></tr>
 <tr class="c2"><td></td><td>Subtitles position: Move right</td><td>[End] or [Numpad 1]</td></tr>
 <tr class="c1"><td></td><td colspan="2">→ use [Shift] for faster movements</td></tr>
+<tr class="c2"><td></td><td>It is also possible to move the display with the mouse</td><td>[Click and drag]</td></tr>
 </table>
 </p>
 <p>
@@ -83,7 +86,7 @@
 <tr class="c2"><td><img src=":/Imag/QSTit_goto_enab.png" height=16> Go to...</td><td>Go to a chosen subtitle</td><td>[Ctrl+G]</td></tr>
 <tr class="c1"><td><img src=":/Imag/QSTit_find_enab.png" height=16> Find...</td><td>Find text in the file</td><td>[Ctrl+F]</td></tr>
 <tr class="c2"><td><img src=":/Imag/QSTit_clea.png" height=16> Clear</td><td>Clear screen and reset file at beginning</td><td>[Ctrl+R]</td></tr>
-<tr class="c1"><td><img src=":/Imag/QSTit_link_done.png" height=16> Bind/Unbind</td><td colspan="2">Un(bind) menu bar and grid for custom positioning</td></tr>
+<tr class="c1"><td><img src=":/Imag/QSTit_link_none.png" height=16> Bind/Unbind</td><td colspan="2">(Un)bind menu bar and grid for custom positioning</td></tr>
 <tr class="c2"><td><img src=":/Imag/QSTit_flag.png"> (Leftmost cell)</td><td>Flag current row<br/>(Flags are saved in the log file)</td><td>[!] or [Numpad /]</td></tr>
 </table>
 </p>
@@ -97,7 +100,7 @@ Subrip files include timecodes, the subtitling can therefore be automated.</p>
 &lt;i&gt; <i>italic</i> &lt;/i&gt;<br/>
 &lt;b&gt; <b>bold</b> &lt;/b&gt;<br/>
 &lt;u&gt; <u>underline</u> &lt;/u&gt;<br/>
-<p>Everything written between opening ( &lt; ) and closing ( &gt; ) brackets will be considered <br/>meta-information and won't be displayed. <br/>An entire line between brackets will still appear in the grid with other lines of subtitles<br/>but won't appear on the screen. You can therefore use brackets to put comments and cues in your file.</p>
+<p>Everything written between opening ( &lt; ) and closing ( &gt; ) brackets will be considered meta-information and<br/> won't be displayed. An entire line between brackets will still appear in the grid with other lines of subtitles<br/>but won't appear on the screen so brackets can be used to put comments and cues in the file.</p>
 </p>
 <p>
 <a name="txt">.txt files</a><br/>
@@ -105,8 +108,7 @@ Subrip files include timecodes, the subtitling can therefore be automated.</p>
 - One subtitle can be composed of several lines (up to four, usually two), they are separated by a backslash ( \ ).<br/>
 - Different subtitles can be composed of different numbers of lines.<br/>
 - Subtitles are only separated by a line break.<br/>
-- The program automatically creates "empty" lines between subtitles so that nothing is displayed<br/>
-between two subtitles when there are no dialogues. There is no need to have empty lines in the file (they would be considered as one subtitle and there would therefore be three consecutive "black lines" when browsing through the file).<br/>
+- The program automatically creates "empty" lines between subtitles so that nothing is displayed <br/>between two subtitles when there are no dialogues. <br/>There is no need to have empty lines in the file (they would be considered as one subtitle <br/>and there would therefore be three consecutive "empty lines" when browsing through the file).<br/>
 <br/>
 Structure:</p>
 <blockquote>
@@ -137,8 +139,7 @@ Du mal à nous trouver?\Lastige reis?<br/>
 - One subtitle can be composed of up to four lines, separated only by a line break.<br/>
 - An empty line separates subtitles.<br/>
 - Nothing will be displayed between the end of one subtitle (Time OUT) and the beginning of the next (Time IN).<br/>
-- It is possible to browse through an .srt file as through a .txt file if you don't want to use the automation functionalities:<br/>
-Just leave the timer on pause and use the arrows to browse through the subtitles.<br/>
+-  If you don't want to use the automation functionalities, it is possible to manually browse through<br/>an .srt file as through a .txt file: Just leave the timer on pause and use the arrows to browse through the subtitles.<br/>
 <br/><br/>
 Structure:<br/>
 <blockquote>
