--- a/src/Help/QSTit_Help_En.htm
+++ b/src/Help/QSTit_Help_En.htm
@@ -36,7 +36,7 @@
 </head>
 <body>
 <table>
-<tr><td><img src=":/Imag/qstit.svg" height=72></td><td><span style="font-weight:bold;">Qstit</span> is developed by Nova Cinema, Brussels - <a href="www.nova-cinema.org">www.nova-cinema.org</a><br/>
+<tr><td><img src=":/Imag/qstit.png" height=72></td><td><span style="font-weight:bold;">Qstit</span> is developed by Nova Cinema, Brussels - <a href="www.nova-cinema.org">www.nova-cinema.org</a><br/>
 <b>Contact:</b> <a href="mailto:subtitles@nova-cinema.org";>subtitles@nova-cinema.org</a><br/>
 <span style="font-size:13px;">Released under the GNU General Public License (GPL) - <a href="www.gnu.org/licenses">www.gnu.org/licenses</a><br/>
 Icons credit: Nova & Axialis Team (with some modifications) - <a href="www.axialis.com/free/icons">www.axialis.com/free/icons</a></span></td></tr></table>
