--- a/src/Help/QSTit_Help_En.htm
+++ b/src/Help/QSTit_Help_En.htm
@@ -1,36 +1,39 @@
 <!--
-  ═══════════════════════════════════════════════════════════════════════════
-    This file is part of QSTit.
-    Feedback, comments and questions are welcome:
-    subtitles@nova-cinema.org
+    This file is part of Qstit
+   ═════════════════════════════════════════════════════════════════
+    Qstit is developed by Nova Cinema, Brussels - http://www.nova-cinema.org
+    Feedback, comments and questions are welcome: subtitles@nova-cinema.org
+   ═════════════════════════════════════════════════════════════════
+    Programming: Georges Piedboeuf-Boen - georges.pi.bo@gmail.com
+   ═════════════════════════════════════════════════════════════════
+    Icons credit: Nova & Axialis Team - http://www.axialis.com/free/icons
+   ═════════════════════════════════════════════════════════════════
+    Qstit is a free software: you can redistribute it and/or modify it under the terms
+    of the GNU General Public License as published by the Free Software Foundation,
+    either version 3 of the License, or (at your option) any later version.
+    If you do, we'd like to hear about it.
 
-    QSTit is a free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-     If you do, we'd like to hear about it.
+    Qstit is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+    without even the implied warranty of MERCHANTABILITY or
+    FITNESS FOR A PARTICULAR PURPOSE.
+    See the GNU General Public License for more details.
 
-    QSTit is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with QSTit. If not, see <http://www.gnu.org/licenses/>
-  ═══════════════════════════════════════════════════════════════════════════
+    You should have received a copy of the GNU General Public License along with Qstit.
+    If not, see http://www.gnu.org/licenses
+   ═════════════════════════════════════════════════════════════════
 -->
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
 <style type="text/css">
-	body	    {font-family:trebuchet ms;font-size:14px;background-color:#151515;color:#ffffff;max-width:730px;}
-	table	    {margin-left:0px;margin-top:9px;margin-bottom:9px;border:0px;border-collapse:collapse;}
-	tr.c0	    {background-color:#151515;}
-	tr.c1	    {background-color:#252525;}
-	tr.c2	    {background-color:#353535;}
-	td	        {padding-top:0px;padding-bottom:0px;padding-left:2px;padding-right:9px;border:1px;}
-    a	        {color:yellow;text-decoration:none;}
-    blockquote  {color:black;background-color:white;padding-left:2px;max-width:600px;}
+	body	      {font-family:trebuchet ms;font-size:14px;background-color:#151515;color:#ffffff;max-width:725px;}
+	table	      {margin-left:0px;margin-top:9px;margin-bottom:9px;border:0px;border-collapse:collapse;}
+	tr.c0	      {background-color:#151515;}
+	tr.c1	      {background-color:#252525;}
+	tr.c2	      {background-color:#353535;}
+	td	              {padding-top:0px;padding-bottom:0px;padding-left:2px;padding-right:9px;border:1px;}
+        a	              {color:yellow;text-decoration:none;}
+        blockquote  {color:black;background-color:white;padding:2px;max-width:600px;}
 </style>
 </head>
 <body>
@@ -40,7 +43,7 @@
 <span style="font-size:13px;">Released under the GNU General Public License (GPL) - <a href="www.gnu.org/licenses">www.gnu.org/licenses</a><br/>
 Icons credit: Nova & Axialis Team (with some modifications) - <a href="www.axialis.com/free/icons">www.axialis.com/free/icons</a></span></td></tr></table>
 <p>
-<br/><u><span style="font-weight:bold;">Menu</span></u>
+<br/><u><span style="font-weight:bold;color:#0055aa;">Menu</span></u>
 <table>
 <tr class="c1"><td><img src=":/Imag/QSTit_sett_enab.png" height=16> Settings</td><td>Show 'Settings' window</td><td>[Ctrl+S]</td></tr>
 <tr class="c2"><td><img src=":/Imag/QSTit_file.png" height=16> Open</td><td>Open subtitle file<br/>(Supported formats: .txt, .srt - see below for details)</td><td>[Ctrl+O]</td></tr>
@@ -50,7 +53,7 @@ Icons credit: Nova & Axialis Team (with some modifications) - <a href="www.axial
 </p>
 <p>
 <br/>
-<u><span style="font-weight:bold;">Subtitles control</span></u>
+<u><span style="font-weight:bold;color:#0055aa;">Subtitles control</span></u>
 <table>
 <tr class="c2"><td><img src=":/Imag/QSTit_upup.png" height=16></td><td>Previous subtitle/empty line</td><td>[&uarr;] or [Numpad 8]</td></tr>
 <tr class="c1"><td><img src=":/Imag/QSTit_down.png" height=16></td><td>Next subtitle/empty line<br/>  With .txt files, also works with:</td><td>[&darr;] or [Numpad 2]<br/>[Space bar] or [Numpad 0]</td></tr>
@@ -67,7 +70,7 @@ Icons credit: Nova & Axialis Team (with some modifications) - <a href="www.axial
 </p>
 <p>
 <br/><br/>
-<u><span style="font-weight:bold;">Display control</span></u>
+<u><span style="font-weight:bold;color:#0055aa;">Display control</span></u>
 <table>
 <tr class="c2"><td style="valign:center;"><img src=":/Imag/QSTit_roll_open.png"> / <img src=":/Imag/QSTit_roll_clos.png"></td><td>Hide/Show subtitle display<br/>(When on pause, resuming the timer lifts 'No show')</td><td>[N] or [Numpad .]</td></tr>
 <tr class="c1"><td></td><td>Move display up</td><td>[Page Up] or [Numpad 9]</td></tr>
@@ -80,35 +83,36 @@ Icons credit: Nova & Axialis Team (with some modifications) - <a href="www.axial
 </p>
 <p>
 <br/>
-<u><span style="font-weight:bold;">Grid</span></u>
+<u><span style="font-weight:bold;color:#0055aa;">Grid</span></u>
 <table>
-<tr class="c2"><td><img src=":/Imag/QSTit_info_enab.png" height=16> File Info</td><td>Show 'File info' window</td><td>[Ctrl+I]</td></tr>
+<tr class="c2"><td><img src=":/Imag/QSTit_info_enab.png" height=16> File info</td><td>Show 'File info' window</td><td>[Ctrl+I]</td></tr>
 <tr class="c1"><td><img src=":/Imag/QSTit_save_enab.png" height=16> Save as...</td><td>Save modified file as...</td><td></td></tr>
-<tr class="c2"><td><img src=":/Imag/QSTit_edit_enab.png" height=16> Edit</td><td>Edit selected text/timecode in the grid</td><td>[Ctrl+E]</td></tr>
+<tr class="c2"><td><img src=":/Imag/QSTit_edit_enab.png" height=16> Edit</td><td>Edit selected text/timecode in the grid<br/>(Edits are also listed in the log file)</td><td>[Ctrl+E]</td></tr>
 <tr class="c1"><td><img src=":/Imag/QSTit_undo_enab.png" height=16> Undo</td><td>Undo changes (in reverse chronology)</td><td>[Ctrl+Z]</td></tr>
 <tr class="c2"><td><img src=":/Imag/QSTit_goto_enab.png" height=16> Go to...</td><td>Go to a chosen subtitle</td><td>[Ctrl+G]</td></tr>
 <tr class="c1"><td><img src=":/Imag/QSTit_find_enab.png" height=16> Find...</td><td>Find text in the file</td><td>[Ctrl+F]</td></tr>
 <tr class="c2"><td><img src=":/Imag/QSTit_clea.png" height=16> Clear</td><td>Clear display and reset file at beginning</td><td>[Ctrl+R]</td></tr>
 <tr class="c1"><td><img src=":/Imag/QSTit_link_none.png" height=16> Bind/Unbind</td><td>(Un)bind menu bar and grid for custom positioning</td><td></td></tr>
-<tr class="c2"><td><img src=":/Imag/QSTit_flag.png"> (Leftmost cell)</td><td>Flag current row<br/>(Flags are saved in a log file)</td><td>[!] or [Numpad /]</td></tr>
+<tr class="c2"><td><img src=":/Imag/QSTit_flag.png"> (Leftmost cell)</td><td>Flag current row<br/>(Flags are saved in the log file)</td><td>[!] or [Numpad /]</td></tr>
 </table>
 </p>
 <p>
-<br/><u><span style="font-weight:bold;">Settings</span></u>
+<br/><u><span style="font-weight:bold;color:#0055aa;">Settings</span></u>
 </p>
 <p>
-Various display and control settings can be found in the 'Settings' window and can be saved, either as a general configuration that will be used by default or as a specific configuration for the opened subtitle file.<br/>
-General settings are saved in a file named "QSTit.cfg" which will be created in your home folder (Linux) or in the folder where the executable is (Windows).<br/>
+Various display and control settings can be found in the 'Settings' window and can be saved, either as a configuration that will be used by default for all files or as a specific configuration for the current subtitle file.<br/>
+Default settings are saved in a file named "QSTit.cfg" which will be created in your home folder (Linux) or in the folder where the executable is (Windows).<br/>
 Configurations saved for a specific subtitle file will be named like the file (with a .cfg extension) and placed in the same folder as the subtitle file.<br/><br/>
-It is recommanded to make your settings while displaying one of the the widest lines, which are listed in the title bar and in the 'File info' window.
+It is recommended to test your settings while displaying one of the the widest lines, which are listed in the title bar and in the 'File info' window.
 </p>
 <p>
-<br/><u><span style="font-weight:bold;">Supported file formats</span></u>
+<br/><u><span style="font-weight:bold;color:#0055aa;">Supported file formats</span></u>
 </p>
-<p>
-Qstit can read simple text (.txt) and Subrip (.srt) files with up to four lines of subtitles.<br/>
+<p>Qstit can read simple text (.txt) and Subrip (.srt) files with up to four lines of subtitles.<br/>
 Both file types are easily editable in any text editor or word processor.<br/>
 Subrip files include timecodes, the subtitling can therefore be automated.</p>
+<p>For both file types, the structure (detailed below) needs to be respected carefully otherwise Qstit won't be able to open them correctly.<br/>
+If errors are found when opening the file, a message is displayed. The errors encountered are listed in the 'File info' window and also saved in a log file in the same folder as the subtitle file (the log file is also created if subtitles are flagged or if modifications have been made using the 'Edit' functionality).</p>
 <p>Both formats can include the following HTML tags to change the style of the text in between them:<br/>
 &lt;i&gt; <i>italic</i> &lt;/i&gt;<br/>
 &lt;b&gt; <b>bold</b> &lt;/b&gt;<br/>
@@ -151,7 +155,6 @@ Du mal à nous trouver?\Lastige reis?<br/>
 <p>
 <br/>
 <span style="font-weight:bold;">.srt files</span><br/>
-- The structure needs to be respected carefully otherwise Qstit won't be able to open the file correctly.<br/>
 - Subtitles are numbered in the file but Qstit recalculates the line numbers to avoid mistakes (so a given subtitle line could have a different number in the .srt file and when viewed in Qstit).<br/>
 - One subtitle can be composed of up to four lines, separated only by a line break.<br/>
 - Different subtitles can be composed of different numbers of lines.<br/>
