--- a/src/Help/QSTit_Help_En.htm
+++ b/src/Help/QSTit_Help_En.htm
@@ -26,24 +26,24 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
 <style type="text/css">
-	body	      {font-family:trebuchet ms;font-size:14px;background-color:#151515;color:#ffffff;max-width:725px;}
+	body	      {font-family:trebuchet ms;font-size:13px;background-color:#151515;color:#ffffff;padding-right:17px;max-width:725px;}
 	table	      {margin-left:0px;margin-top:9px;margin-bottom:9px;border:0px;border-collapse:collapse;}
 	tr.c0	      {background-color:#151515;}
 	tr.c1	      {background-color:#252525;}
 	tr.c2	      {background-color:#353535;}
 	td	              {padding-top:0px;padding-bottom:0px;padding-left:2px;padding-right:9px;border:1px;}
         a	              {color:yellow;text-decoration:none;}
-        blockquote  {color:black;background-color:white;padding:2px;max-width:600px;}
+        blockquote  {color:black;background-color:white;padding:2px;max-width:500px;}
 </style>
 </head>
 <body>
 <table>
-<tr><td><img src=":/Imag/qstit.png" height=72></td><td><span style="font-weight:bold;">Qstit</span> is developed by Nova Cinema, Brussels - <a href="www.nova-cinema.org">www.nova-cinema.org</a><br/>
+<tr><td><img src=":/Imag/qstit.png" height=64></td><td><span style="font-weight:bold;">Qstit</span> is developed by Nova Cinema, Brussels - <a href="www.nova-cinema.org">www.nova-cinema.org</a><br/>
 <b>Contact:</b> <a href="mailto:subtitles@nova-cinema.org";>subtitles@nova-cinema.org</a><br/>
 <span style="font-size:13px;">Released under the GNU General Public License (GPL) - <a href="www.gnu.org/licenses">www.gnu.org/licenses</a><br/>
 Icons credit: Nova & Axialis Team (with some modifications) - <a href="www.axialis.com/free/icons">www.axialis.com/free/icons</a></span></td></tr></table>
 <p>
-<br/><u><span style="font-weight:bold;color:#0055aa;">Menu</span></u>
+<u><span style="font-weight:bold;color:#0055aa;">Menu:</span></u>
 <table>
 <tr class="c1"><td><img src=":/Imag/QSTit_sett_enab.png" height=16> Settings</td><td>Show 'Settings' window</td><td>[Ctrl+S]</td></tr>
 <tr class="c2"><td><img src=":/Imag/QSTit_file.png" height=16> Open</td><td>Open subtitle file<br/>(Supported formats: .txt, .srt - see below for details)</td><td>[Ctrl+O]</td></tr>
@@ -52,8 +52,7 @@ Icons credit: Nova & Axialis Team (with some modifications) - <a href="www.axial
 </table>
 </p>
 <p>
-<br/>
-<u><span style="font-weight:bold;color:#0055aa;">Subtitles control</span></u>
+<u><span style="font-weight:bold;color:#0055aa;">Subtitles control:</span></u>
 <table>
 <tr class="c2"><td><img src=":/Imag/QSTit_upup.png" height=16></td><td>Previous subtitle/empty line</td><td>[&uarr;] or [Numpad 8]</td></tr>
 <tr class="c1"><td><img src=":/Imag/QSTit_down.png" height=16></td><td>Next subtitle/empty line<br/>  With .txt files, also works with:</td><td>[&darr;] or [Numpad 2]<br/>[Space bar] or [Numpad 0]</td></tr>
@@ -62,15 +61,14 @@ Icons credit: Nova & Axialis Team (with some modifications) - <a href="www.axial
 <tr class="c1"><td><img src=":/Imag/QSTit_acce.png" height=16></td><td>Increase timer speed<br/>(Timer goes 0.01 second faster)</td><td>[+] or [P]</td><td>(.srt files only)</td></tr>
 <tr class="c2"><td><img src=":/Imag/QSTit_dece.png" height=16></td><td>Decrease timer speed<br/>(Timer goes 0.01 second slower)</td><td>[-] or [M]</td><td>(.srt files only)</td></tr>
 <tr class="c0"><td>&nbsp;</td><td></td><td></td></tr>
-<tr class="c1"><td><img src=":/Imag/QSTit_jump.png" height=16></td><td>Jump forward on the timeline</td><td>[&rarr;] or [Numpad 6]</td><td>(.srt files only)</td></tr>
-<tr class="c1"><td></td><td colspan="2">(Jump steps can be set in the settings, between 0.1 and 1 second)</td><td></td></tr>
-<tr class="c2"><td><img src=":/Imag/QSTit_jump_back.png" height=16></td><td>Jump backward on the timeline</td><td>[&larr;] or [Numpad 4]</td><td>(.srt files only)</td></tr>
-<tr class="c2"><td></td><td colspan="2">(Jump steps can be set in the settings, between 0.1 and 1 second)</td><td></td></tr>
+<tr class="c1"><td rowspan="2"><img src=":/Imag/QSTit_jump.png" height=16></td><td>Jump forward on the timeline</td><td>[&rarr;] or [Numpad 6]</td><td rowspan="2">(.srt files only)</td></tr>
+<tr class="c1"><td colspan="2">(Jump steps can be set in the settings, between 0.1 and 1 second)</td></tr>
+<tr class="c2"><td rowspan="2"><img src=":/Imag/QSTit_jump_back.png" height=16></td><td>Jump backward on the timeline</td><td>[&larr;] or [Numpad 4]</td><td rowspan="2">(.srt files only)</td></tr>
+<tr class="c2"><td colspan="2">(Jump steps can be set in the settings, between 0.1 and 1 second)</td></tr>
 </table>
 </p>
 <p>
-<br/><br/>
-<u><span style="font-weight:bold;color:#0055aa;">Display control</span></u>
+<u><span style="font-weight:bold;color:#0055aa;">Display control:</span></u>
 <table>
 <tr class="c2"><td style="valign:center;"><img src=":/Imag/QSTit_roll_open.png"> / <img src=":/Imag/QSTit_roll_clos.png"></td><td>Hide/Show subtitle display<br/>(When on pause, resuming the timer lifts 'No show')</td><td>[N] or [Numpad .]</td></tr>
 <tr class="c1"><td></td><td>Move display up</td><td>[Page Up] or [Numpad 9]</td></tr>
@@ -82,8 +80,7 @@ Icons credit: Nova & Axialis Team (with some modifications) - <a href="www.axial
 </table>
 </p>
 <p>
-<br/>
-<u><span style="font-weight:bold;color:#0055aa;">Grid</span></u>
+<u><span style="font-weight:bold;color:#0055aa;">Grid:</span></u>
 <table>
 <tr class="c2"><td><img src=":/Imag/QSTit_info_enab.png" height=16> File info</td><td>Show 'File info' window</td><td>[Ctrl+I]</td></tr>
 <tr class="c1"><td><img src=":/Imag/QSTit_save_enab.png" height=16> Save as...</td><td>Save modified file as...</td><td></td></tr>
@@ -97,7 +94,7 @@ Icons credit: Nova & Axialis Team (with some modifications) - <a href="www.axial
 </table>
 </p>
 <p>
-<br/><u><span style="font-weight:bold;color:#0055aa;">Settings</span></u>
+<u><span style="font-weight:bold;color:#0055aa;">Settings:</span></u>
 </p>
 <p>
 Various display and control settings can be found in the 'Settings' window and can be saved, either as a configuration that will be used by default for all files or as a specific configuration for the current subtitle file.<br/>
@@ -106,11 +103,11 @@ Configurations saved for a specific subtitle file will be named like the file (w
 It is recommended to test your settings while displaying one of the the widest lines, which are listed in the title bar and in the 'File info' window.
 </p>
 <p>
-<br/><u><span style="font-weight:bold;color:#0055aa;">Supported file formats</span></u>
+<u><span style="font-weight:bold;color:#0055aa;">Supported file formats:</span></u>
 </p>
-<p>Qstit can read simple text (.txt) and Subrip (.srt) files with up to four lines of subtitles.<br/>
+<p>Qstit can read simple text (.txt) and SubRip (.srt) files with up to four lines of subtitles.<br/>
 Both file types are easily editable in any text editor or word processor.<br/>
-Subrip files include timecodes, the subtitling can therefore be automated.</p>
+SubRip files include timecodes, the subtitling can therefore be automated.</p>
 <p>For both file types, the structure (detailed below) needs to be respected carefully otherwise Qstit won't be able to open them correctly.<br/>
 If errors are found when opening the file, a message is displayed. The errors encountered are listed in the 'File info' window and also saved in a log file in the same folder as the subtitle file (the log file is also created if subtitles are flagged or if modifications have been made using the 'Edit' functionality).</p>
 <p>Both formats can include the following HTML tags to change the style of the text in between them:<br/>
@@ -123,7 +120,7 @@ The tags are not displayed in the text frame on screen but appear in the grid.</
 <p>Everything written between opening ( &lt; ) and closing ( &gt; ) brackets will be considered meta-information and won't be displayed. An entire line between brackets will still appear in the grid with other lines of subtitles but won't appear on the screen so brackets can be used to put comments and cues in the file.</p>
 <p>
 <br/>
-<span style="font-weight:bold;">.txt files</span><br/>
+<span style="font-weight:bold;">Text (.txt) files:</span><br/>
 - One line in the file = one row in the grid = one subtitle.<br/>
 - One subtitle can be composed of several lines (up to four, usually two), they are separated by a backslash ( \ ).<br/>
 - Different subtitles can be composed of different numbers of lines.<br/>
@@ -133,28 +130,28 @@ There is no need to have empty lines in the file (they would be considered as on
 </p>
 <u>Structure:</u>
 <blockquote>
-Subtitle 1 Line 1\Subtitle 1 Line 2<br/>
-Subtitle 2 Line 1<br/>
-Subtitle 3, Line 1\Subtitle 3, Line 2\Subtitle 3, Line 3<br/>
-Subtitle 4, Line 1\Subtitle 4, Line 2<br/>
-...
+&nbsp; Subtitle 1 Line 1\Subtitle 1 Line 2<br/>
+&nbsp; Subtitle 2 Line 1<br/>
+&nbsp; Subtitle 3, Line 1\Subtitle 3, Line 2\Subtitle 3, Line 3<br/>
+&nbsp; Subtitle 4, Line 1\Subtitle 4, Line 2<br/>
+&nbsp; ...
 </blockquote>
 <u>Example:</u>
 <blockquote>
-&lt;i&gt;L'ENTREVUE&lt;/i&gt;\&lt;i&gt;HET SOLLICITATIEGESPREK&lt;/i&gt;<br/>
-J'ai rendez-vous avec M. Ullman.\Ik heb een afspraak met Mr. Ullman.<br/>
-Je suis Jack Torrance.\Mijn naam is Torrance.<br/>
-Première porte à gauche.\Eerste deur links.<br/>
-&lt;i&gt;M. Ullman?\Mr. Ullman?&lt;/i&gt; <br/>
-Jack Torrance.<br/>
-Oh... Entrez donc.\Kom binnen, Jack.<br/>
-Ma secrétaire, Suzy.\M'n secretaresse, Susie.<br/>
-Du mal à nous trouver?\Lastige reis?<br/>
-...
+&nbsp; &lt;i&gt;L'ENTREVUE&lt;/i&gt;\&lt;i&gt;HET SOLLICITATIEGESPREK&lt;/i&gt;<br/>
+&nbsp; J'ai rendez-vous avec M. Ullman.\Ik heb een afspraak met Mr. Ullman.<br/>
+&nbsp; Je suis Jack Torrance.\Mijn naam is Torrance.<br/>
+&nbsp; Première porte à gauche.\Eerste deur links.<br/>
+&nbsp; &lt;i&gt;M. Ullman?\Mr. Ullman?&lt;/i&gt; <br/>
+&nbsp; Jack Torrance.<br/>
+&nbsp; Oh... Entrez donc.\Kom binnen, Jack.<br/>
+&nbsp; Ma secrétaire, Suzy.\M'n secretaresse, Susie.<br/>
+&nbsp; Du mal à nous trouver?\Lastige reis?<br/>
+&nbsp; ...
 </blockquote>
 <p>
 <br/>
-<span style="font-weight:bold;">.srt files</span><br/>
+<span style="font-weight:bold;">SubRip (.srt) files:</span><br/>
 - Subtitles are numbered in the file but Qstit recalculates the line numbers to avoid mistakes (so a given subtitle line could have a different number in the .srt file and when viewed in Qstit).<br/>
 - One subtitle can be composed of up to four lines, separated only by a line break.<br/>
 - Different subtitles can be composed of different numbers of lines.<br/>
@@ -164,48 +161,47 @@ Du mal à nous trouver?\Lastige reis?<br/>
 </p>
 <u>Structure:</u>
 <blockquote>
-1<br/>
-Time IN --> Time OUT<br/>
-Subtitle 1 Line 1<br/>
-Subtitle 1 Line 2<br/>
+&nbsp; 1<br/>
+&nbsp; Time IN --> Time OUT<br/>
+&nbsp; Subtitle 1 Line 1<br/>
+&nbsp; Subtitle 1 Line 2<br/>
 <br/>
-2<br/>
-Time IN --> Time OUT<br/>
-Subtitle 2 Line 1<br/>
+&nbsp; 2<br/>
+&nbsp; Time IN --> Time OUT<br/>
+&nbsp; Subtitle 2 Line 1<br/>
 <br/>
-3<br/>
-Time IN --> Time OUT<br/>
-Subtitle 3 Line 1<br/>
-Subtitle 3 Line 2<br/>
-...
+&nbsp; 3<br/>
+&nbsp; Time IN --> Time OUT<br/>
+&nbsp; Subtitle 3 Line 1<br/>
+&nbsp; Subtitle 3 Line 2<br/>
+&nbsp; ...
 </blockquote>
 <u>Example:</u>
 <blockquote>
-1<br/>
-00:01:10,680 --> 00:01:12,477<br/>
-Soon it's summer holidays!<br/>
+&nbsp; 1<br/>
+&nbsp; 00:01:10,680 --> 00:01:12,477<br/>
+&nbsp; Soon it's summer holidays!<br/>
 <br/>
-2<br/>
-00:01:12,880 --> 00:01:16,190<br/>
-You're going with your father to your summer house...<br/>
+&nbsp; 2<br/>
+&nbsp; 00:01:12,880 --> 00:01:16,190<br/>
+&nbsp; You're going with your father to your summer house...<br/>
 <br/>
-3<br/>
-00:01:20,040 --> 00:01:24,033<br/>
-I want you to come with me!<br/>
-I'll be bored!<br/>
+&nbsp; 3<br/>
+&nbsp; 00:01:20,040 --> 00:01:24,033<br/>
+&nbsp; I want you to come with me!<br/>
+&nbsp; I'll be bored!<br/>
 <br/>
-4<br/>
-00:01:24,920 --> 00:01:28,595<br/>
-&lt;i&gt;Nevertheless you'll be by the<br/>
-side of your beloved Mr. Togo!&lt;/i&gt;<br/>
+&nbsp; 4<br/>
+&nbsp; 00:01:24,920 --> 00:01:28,595<br/>
+&nbsp; &lt;i&gt;Nevertheless you'll be by the<br/>
+&nbsp; side of your beloved Mr. Togo!&lt;/i&gt;<br/>
 <br/>
-5<br/>
-00:01:29,000 --> 00:01:32,072<br/>
-That was mean!<br/>
-And you're supposed to be my friend!<br/>
+&nbsp; 5<br/>
+&nbsp; 00:01:29,000 --> 00:01:32,072<br/>
+&nbsp; That was mean!<br/>
+&nbsp; And you're supposed to be my friend!<br/>
 <br/>
-...
-</blockquote>
-<br/>
+&nbsp; ...
+</blockquote><br/>
 </body>
 </html>
